--- a/usb_device/Debug/makefile
+++ b/usb_device/Debug/makefile
@@ -10,6 +10,7 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include Startup/subdir.mk
+-include Src/Helpers/subdir.mk
 -include Src/subdir.mk
 -include objects.mk
 
